--- a/molecule/master_slave/converge.yml
+++ b/molecule/master_slave/converge.yml
@@ -18,4 +18,4 @@
         mysql_users:
           - name: user1
             password: Ang4eij~aiSh4lu4tho5
-            priv: "db1.*:ALL"
+            priv: 'db1.*:ALL'
